# unc

./: CMakeLists.txt  README.md  concepts.cpp  map_final  ref2.cpp  refbuild.txt  refbuild2.txt  reference.cpp  testbuild.txt  trialf.cpp
WASM/: bindings.cpp  build.bat  build_readme.txt  chopsticks_bot.js  chopsticks_bot.wasm  engine_unc.cpp  engine_unc.hpp  gamebot_terminal.cpp  index.html  index2.html  map.hpp  serializer.cpp  serializer.hpp  server.py  state_repr.hpp  try.html
WASM_res/: chopsticks_bot.data  chopsticks_bot.js
cdn/: chopsticks_bot.data  chopsticks_bot.wasm
cdn2/: chopsticks_bot.wasm
cdn4/: chopsticks_bot.js  chopsticks_bot.wasm
include/: map.hpp
include/utils/: mod.hpp  serializer.hpp  state_repr.hpp
include/utils/moves/: arrange_for_distribution.hpp  next_state.hpp
include/utils/unmove/: arrange_attacker_victim.hpp  arrange_for_undistribution.hpp  left_from_left.hpp  left_from_right.hpp  prev_states.hpp  right_from_left.hpp  right_from_right.hpp  undistribute.hpp
src/: map.cpp
src/MapBuilder/: build_map_0.cpp  build_map_0.txt  build_map_p_0.cpp  build_map_p_0.txt  map_0  test_map0.cpp  test_map0.txt  test_map_p_0.cpp  test_map_p_0.txt
src/MapValueSetter/: set_map_values.cpp  set_score.cpp  set_score.txt  set_suicide.txt  set_suicides.cpp  set_suicides.hpp  set_terminal_depth.cpp  set_terminal_depth.txt
src/UncEngine/: engine_unc.hpp  gamebot_terminal.cpp
src/utils/: mod.cpp  serializer.cpp  state_repr.cpp
src/utils/moves/: arrange_for_distribution.cpp  distribute.cpp  next_state.cpp
src/utils/unmove/: arrange_attacker_victim.cpp  arrange_for_undistribution.cpp  left_from_left.cpp  left_from_right.cpp  prev_states.cpp  right_from_left.cpp  right_from_right.cpp  undistribute.cpp
